--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.0.8",
     "sharp": "^0.32.6",
+    "swiper": "^11.2.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
