--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "pactum": "^3.7.6",
