--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
     "swiper": "^11.2.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
